--- a/The_Button/index.html
+++ b/The_Button/index.html
@@ -77,6 +77,13 @@
 		links[65] = "https://youtu.be/ZpkmYINxodc" 			// angry cat attacks
 		links[66] = "https://youtu.be/yPuI4l0jK7s"			// Domino's App Feat Hatsune Miku [ ORIGINAL FULL VIDEO ]
 		links[67] = "https://scontent-hel2-1.cdninstagram.com/vp/f43d4d99505080a78d15655b300ca96c/5E437182/t51.2885-15/e35/p1080x1080/74449783_109261083681375_4803398061356234576_n.jpg?_nc_ht=scontent-hel2-1.cdninstagram.com&_nc_cat=1"	// Pennywise
+		links[68] = "https://youtu.be/asjQNZn7vng"			// Rendering at 5am
+		links[69] = "https://youtu.be/-uAZdIJIl8o"			// Nokia ringtone arabic
+		links[70] = "https://youtu.be/mbeC2w-uIEU"			// WARIO LAUGHING
+		links[71] = "https://youtu.be/qKxfWd79HFI?t=5"		// Pufferfish eating a carrot
+		links[72] = "https://youtu.be/mpTrAJSRV6Q"			// and then there's chunky he's dead but 1 hour of complete silence
+		links[73] = "https://youtu.be/1sWDF2XsOEk"			// Super Mario World ending theme but its monkeys dancing in a circle
+		links[74] = "https://youtu.be/2ZIpFytCSVc"			// Bruh Sound Effect #2
 		
 		function randomLink(){
 			if (links.length != 0) {
