Changed some stuff

--- a/The_Button/index.html
+++ b/The_Button/index.html
@@ -84,6 +84,7 @@
 		links[72] = "https://youtu.be/mpTrAJSRV6Q"			// and then there's chunky he's dead but 1 hour of complete silence
 		links[73] = "https://youtu.be/1sWDF2XsOEk"			// Super Mario World ending theme but its monkeys dancing in a circle
 		links[74] = "https://youtu.be/2ZIpFytCSVc"			// Bruh Sound Effect #2
+		links[75] = "https://youtu.be/2vPBZGl4Hls"			// Linus Tech Tips Dancing
 		
 		function randomLink(){
 			if (links.length != 0) {
