Added some stuff

--- a/The_Button/index.html
+++ b/The_Button/index.html
@@ -85,6 +85,7 @@
 		links[73] = "https://youtu.be/1sWDF2XsOEk"			// Super Mario World ending theme but its monkeys dancing in a circle
 		links[74] = "https://youtu.be/2ZIpFytCSVc"			// Bruh Sound Effect #2
 		links[75] = "https://youtu.be/2vPBZGl4Hls"			// Linus Tech Tips Dancing
+		links[76] = "https://youtu.be/8r3jhs8gATA"			// burger nuggets nuggets burger
 		
 		function randomLink(){
 			if (links.length != 0) {
